benchmark/quicksort/errore
int8_t uint8_t
In file included from /home/dews/Scrivania/CC4CS/benchmark/quicksort/frst.c:9:
/home/dews/Scrivania/test/includes/values_5/values.h:4:9: error: variably modified ‘a’ at file scope
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
         ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:26: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                          ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:26: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:31: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                               ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:31: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:36: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                                    ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:36: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:40: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                                        ^~
/home/dews/Scrivania/test/includes/values_5/values.h:4:40: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:44: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                                            ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:44: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:49: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                                                 ^~
/home/dews/Scrivania/test/includes/values_5/values.h:4:49: note: (near initialization for ‘a’)
/home/dews/Scrivania/test/includes/values_5/values.h:4:53: warning: excess elements in array initializer
  int8_t a[size] = {-119, -70, -78, -6, 52, -84, 37, -97};
                                                     ^
/home/dews/Scrivania/test/includes/values_5/values.h:4:53: note: (near initialization for ‘a’)
Exception in Tkinter callback
Traceback (most recent call last):
  File "/home/dews/anaconda3/lib/python3.6/tkinter/__init__.py", line 1705, in __call__
    return self.func(*args)
  File "/home/dews/Scrivania/CC4CS/src/__init__.py", line 180, in callback
    cmdMan.executeCommandSet(cmdsProfiling, inputsPath, parsingFunction = parser.run, debugFlag = True)
  File "/home/dews/Scrivania/CC4CS/src/CommandsManager.py", line 69, in executeCommandSet
    self.executeCommand(completedCmd)
  File "/home/dews/Scrivania/CC4CS/src/CommandsManager.py", line 45, in executeCommand
    call(flags)
  File "/home/dews/anaconda3/lib/python3.6/subprocess.py", line 287, in call
    with Popen(*popenargs, **kwargs) as p:
  File "/home/dews/anaconda3/lib/python3.6/subprocess.py", line 729, in __init__
    restore_signals, start_new_session)
  File "/home/dews/anaconda3/lib/python3.6/subprocess.py", line 1364, in _execute_child
    raise child_exception_type(errno_num, err_msg, err_filename)
FileNotFoundError: [Errno 2] No such file or directory: '/home/dews/Scrivania/test//files/values_5/frst': '/home/dews/Scrivania/test//files/values_5/frst'
^CTraceback (most recent call last):
  File "/home/dews/Scrivania/CC4CS/src/__init__.py", line 223, in <module>
    viewInstance.start()
  File "/home/dews/Scrivania/CC4CS/src/GUI.py", line 24, in start
    self.root.mainloop()
  File "/home/dews/anaconda3/lib/python3.6/tkinter/__init__.py", line 1283, in mainloop
    self.tk.mainloop(n)
